src/frontend/lexer/grammar
program     -> declaration* EOF ;

declaration -> funDecl | varDecl | statement ;

funDecl     -> "fun" function ;

function    -> IDENTIFIER "(" parameters? ")" block;

parameters  -> IDENTIFIER ( "," IDENTIFIER )* ;

varDecl     -> "var" IDENTIFIER ( "=" expression )? ";" ;

breakStmt   -> "break" ";" ;

statement   -> exprStmt | printStmt | ifStmt | whileStmt | block | breakStmt ;

exprStmt    -> expression ";" ;

printStmt   -> "print" expression ";" ;

ifStmt      -> "if" "(" expression ")" statement ( "else" statement )? ;

whileStmt   -> "while" "(" expression ")" breakStmt ;

forStmt     -> "for" "(" ( varDecl | exprStmt | ";" )
                expression? ";"
                expression? ";" ")" breakStmt ;

breakStmt   -> "break" ";" ;
                
block       -> "{" declaration* "}" ;

expression  -> assignment ;

assignment  -> IDENTIFIER "=" assignment | logic_or ;

logic_or    -> logic_and ( "or" logic_and )? ;

logic_and   -> ternary ( "and" ternary )? ;

ternary     -> comma ( "?" expression ":" expression )? ;

comma       -> equality? ( "," equality )* ;

equality    -> comparison? ( ( "!=" | "==" ) comparison )* ;

comparison  -> term? ( ( ">" | ">=" | "<" | "<=" ) term )* ;

term        -> factor? ( ( "-" | "+" ) factor )* ;

factor      -> unary? ( ( "/" | "*" ) unary )* ;

unary       -> ( "!" | "-" ) unary
            | call ;

call        -> primary ( "(" arguments? ")" )* ;

arguments   -> expression ( "," expression )*
            
primary     -> NUMBER | STRING 
            | "true" | "false" | "nil"
            | "(" expression ")" 
            | IDENTIFIER ;
